Improvied HcHttpProbe test, better test of failure case.