@@ -2,14 +2,17 @@ package jrds.probe;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.lang.reflect.InvocationTargetException;
-import java.net.URL;
 import java.util.Collections;
 import java.util.Map;
 
+import javax.servlet.ServletException;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+import jrds.HostInfo;
 import jrds.ProbeDesc;
 import jrds.PropertiesManager;
-import jrds.HostInfo;
+import jrds.StoreOpener;
 import jrds.Tools;
 import jrds.starter.Connection;
 import jrds.starter.HostStarter;
@@ -17,11 +20,22 @@ import jrds.starter.Resolver;
 import jrds.starter.SSLStarter;
 import jrds.starter.SocketFactory;
 import jrds.starter.Starter;
+import jrds.starter.Timer;
 import jrds.store.RrdDbStoreFactory;
 
 import org.apache.log4j.Level;
 import org.apache.log4j.Logger;
+import org.eclipse.jetty.server.Connector;
+import org.eclipse.jetty.server.Handler;
+import org.eclipse.jetty.server.Request;
+import org.eclipse.jetty.server.Server;
+import org.eclipse.jetty.server.ServerConnector;
+import org.eclipse.jetty.server.handler.HandlerCollection;
+import org.eclipse.jetty.server.handler.HandlerList;
+import org.eclipse.jetty.server.handler.ResourceHandler;
+import org.junit.After;
 import org.junit.Assert;
+import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Rule;
 import org.junit.Test;
@@ -33,21 +47,62 @@ public class ApacheHttpClientTest {
 
     @Rule
     public TemporaryFolder testFolder = new TemporaryFolder();
+
     private boolean collected = false;
+    private Server server = null;
+    private boolean shouldFail = true;
 
     @BeforeClass
     static public void configure() throws Exception {
         Tools.configure();
-        Tools.setLevel(logger, Level.TRACE, HCHttpProbe.class.getName(), HttpClientStarter.class.getName(), Resolver.class.getName(), Connection.class.getName(), "jrds.Starter");
+        Tools.setLevel(logger, Level.TRACE, HCHttpProbe.class.getName(), HttpClientStarter.class.getName(), Resolver.class.getName(), Connection.class.getName(), "jrds.Starter", "jrds.Probe.ApacheHttpClientTester");
+        StoreOpener.prepare("FILE");
+    }
+
+    @Before
+    public void startServer() throws Exception {
+
+        server = new Server(0);
+        ServerConnector connector = new ServerConnector(server);
+        server.setConnectors(new Connector[]{connector});
+
+        ResourceHandler staticFiles = new ResourceHandler() {
+            @Override
+            public void handle(String target, Request baseRequest,
+                    HttpServletRequest request, HttpServletResponse response)
+                            throws IOException, ServletException {
+                if(shouldFail) {
+                    response.setStatus(404);                    
+                } else {
+                    response.setStatus(200);                    
+                }
+                response.getOutputStream().println("an empty line");
+                response.flushBuffer();
+            }
+        };
+
+        HandlerCollection handlers = new HandlerList();
+        handlers.setHandlers(new Handler[]{staticFiles});
+        server.setHandler(handlers);
+        server.start();
+
+    }
+
+    @After
+    public void finish() throws Exception {
+        server.stop();
+        server = null;
     }
 
     private  HostStarter addConnection(Starter cnx) throws IOException {
         PropertiesManager pm = Tools.makePm(testFolder, "timeout=1", "collectorThreads=1");
 
         HostStarter localhost = new HostStarter(new HostInfo("localhost"));
+        Timer t = Tools.getDefaultTimer();
+        localhost.setParent(t);
         localhost.getHost().setHostDir(testFolder.getRoot());
-        localhost.registerStarter(new SSLStarter());
-        localhost.registerStarter(new SocketFactory());
+        t.registerStarter(new SSLStarter());
+        t.registerStarter(new SocketFactory());
         localhost.registerStarter(cnx);
         cnx.configure(pm);
         return localhost;
@@ -66,7 +121,7 @@ public class ApacheHttpClientTest {
     }
 
     @Test
-    public void testConnect() throws IOException, InvocationTargetException {
+    public void testConnect() throws IOException, InterruptedException {
         HttpClientStarter cnx = new HttpClientStarter();
         HostStarter localhost = addConnection(cnx);
         localhost.find(Resolver.class).doStart();
@@ -78,22 +133,26 @@ public class ApacheHttpClientTest {
             }
             @Override
             protected Map<String, Number> parseStream(InputStream stream) {
-                return Collections.emptyMap();
-            }
-            public void collect() {
                 ApacheHttpClientTest.this.collected = true;
-                super.collect();
+                return Collections.emptyMap();
             }
         };
         Map<String, String> empty = Collections.emptyMap();
         p.setMainStore(new RrdDbStoreFactory(), empty);
         p.setName("toto");
-        p.setPd(new ProbeDesc());
-        p.getPd().add("test", DsType.COUNTER);
+        ProbeDesc pd = new ProbeDesc();
+        pd.add("test", DsType.COUNTER);
+        pd.setName("ApacheHttpClientTester");
+        p.setPd(pd);
         p.setHost(localhost);
-        p.configure(new URL("http://localhost:4141"));
+        p.configure(server.getURI().toURL());
         p.checkStore();
         localhost.addProbe(p);
+        localhost.getParent().startCollect();
+        // Run twice, to detect failure management in the probe
+        localhost.collectAll();
+        Thread.sleep(1500);
+        shouldFail = false;
         localhost.collectAll();
         Assert.assertTrue("Didn't try to collect", collected);
     }
